Fix minor details
Signed-off-by: Denis Bonnand <denis.bonnand@supergrid-institute.com>